Stops fix
Fixed an issue that caused Stops not to return earliest reachable stop.